feat: Add AI agent integration support (Phase 1)
- Add Pydantic models for schema validation (schema_v2.py)
- Create unified agent API with search_flights() (agent_api.py)
- Implement structured error handling (errors.py)
- Add comprehensive docstrings to core.py
- Update __init__.py with agent API exports
- Add optional dependencies for agent/mcp in pyproject.toml
- Add AI_AGENT_INTEGRATION.md documentation

This enables AI agents like OpenClaw to interact with fast-flights
through a simplified, validated API with structured JSON responses.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,21 @@ dependencies = [
 local = [
     "playwright"
 ]
+agent = [
+    "pydantic>=2.0",
+    "pydantic-settings>=2.0",
+]
+mcp = [
+    "mcp>=1.0",
+    "pydantic>=2.0",
+    "pydantic-settings>=2.0",
+]
+all = [
+    "playwright",
+    "pydantic>=2.0",
+    "pydantic-settings>=2.0",
+    "mcp>=1.0",
+]
 
 [project.urls]
 "Source" = "https://github.com/AWeirdDev/flights"
