--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,13 @@ all = [
     "mcp>=1.0",
 ]
 
+[project.scripts]
+fast-flights-mcp = "fast_flights.mcp_server:run"
+
 [project.urls]
-"Source" = "https://github.com/AWeirdDev/flights"
-"Issues" = "https://github.com/AWeirdDev/flights/issues"
-"Documentation" = "https://aweirddev.github.io/flights/"
+"Source" = "https://github.com/laikhtman/flights_OpenClaw"
+"Issues" = "https://github.com/laikhtman/flights_OpenClaw/issues"
+"Documentation" = "https://github.com/laikhtman/flights_OpenClaw#readme"
 
 [tool.setuptools]
 packages = [
