Phase 8: HTTP API with FastAPI
- Add fast_flights/http_api.py with complete REST API:
  - POST /search - Flight search
  - GET /airports - Airport lookup
  - POST /compare - Date comparison
  - GET /health - Health check
  - POST /flexible-search - Flexible date search
  - GET /weekend-flights - Weekend flight search
  - POST /calendar-heatmap - Monthly price calendar
  - POST /track - Start price tracking
  - GET /price-history - Historical prices
  - POST /alerts - Set price alerts
  - GET /tracked-routes - List tracked routes
  - GET /airlines/search - Search airlines
  - GET /airlines/{code} - Get airline info
  - GET /alliances/{alliance} - Get alliance members
  - GET /airlines/low-cost/list - Low-cost carriers
  - POST /filter-flights - Filter by airline

- Add API features:
  - OpenAPI/Swagger documentation at /docs
  - API key authentication via X-API-Key header
  - Rate limiting middleware (60 req/min default)
  - Request/response logging
  - CORS middleware

- Add deployment configuration:
  - Dockerfile with multi-stage build
  - docker-compose.yml with Redis cache
  - .env.example with environment variables

- Update pyproject.toml:
  - Add [api] optional dependencies (fastapi, uvicorn)
  - Add fast-flights-api CLI entry point

- Update __init__.py exports (http_app, run_http_api)
- Add docs/http-api.md with full API documentation
- Update README.md with HTTP API section

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,15 +64,26 @@ mcp = [
     "pydantic>=2.0",
     "pydantic-settings>=2.0",
 ]
+api = [
+    "fastapi>=0.109.0",
+    "uvicorn[standard]>=0.27.0",
+    "python-multipart>=0.0.6",
+    "pydantic>=2.0",
+    "pydantic-settings>=2.0",
+]
 all = [
     "playwright",
     "pydantic>=2.0",
     "pydantic-settings>=2.0",
     "mcp>=1.0",
+    "fastapi>=0.109.0",
+    "uvicorn[standard]>=0.27.0",
+    "python-multipart>=0.0.6",
 ]
 
 [project.scripts]
 fast-flights-mcp = "fast_flights.mcp_server:run"
+fast-flights-api = "fast_flights.http_api:run"
 
 [project.urls]
 "Source" = "https://github.com/laikhtman/flights_OpenClaw"
